# hack-guangya

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUILD_MACOS.md  Dockerfile  Dockerfile.ubuntu-native  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.mjs
packaging/ubuntu-native/: README.md  guangya-sync.env  guangya-sync.service  guangya-syncctl  install.sh  runtime-package.json  uninstall.sh
scripts/: package-ubuntu-native.mjs
server/: auto-share.mjs  auto-share.test.mjs  mock-server.mjs  server.mjs  server.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: auth.json  default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml
src-tauri/src/: main.rs
ui/: App.vue  httpResponse.js  httpResponse.test.js  index.html  main.js  renameRules.js  renameRules.test.js  shareLink.js  shareLink.test.js  styles.css  transferQueue.js  transferQueue.test.js  uploadProgress.js  uploadProgress.test.js
