[package]
name = "guangya-folder-sync"
version = "0.1.15"
description = "光鸭云盘文件夹同步 Tauri 客户端"
authors = ["hack-guangya"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.4.0"
opendal = { version = "0.57", default-features = false, features = ["services-oss", "reqwest-rustls-tls", "executors-tokio", "layers-retry"] }
notify = "8.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "fs", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
thiserror = "2"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
